<resources>
    <string name="app_name">RatingApp</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Commencer</string>
    <string name="insuffisant">insuffisant</string>
    <string name="moyen">moyen</string>
    <string name="bon">bon</string>
    <string name="exellent">exellent</string>
    <string name="Question">Question</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="Participants">Participants: %1$s </string>
    <string name="Tres_bien">Très bien: %1$s ( %2$s %%)</string>
    <string name="Bien">Bien: %1$s ( %2$s %%) </string>
    <string name="Moyen">Moyen: %1$s ( %2$s %%) </string>
    <string name="Mauvais">Mauvais: %1$s ( %2$s %%) </string>
</resources>
