<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.StatActivity"
    android:background="#512DA8"
    android:id="@+id/stat_full_layout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="10dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Effacer"
            android:id="@+id/purge_db_btn"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#FFFFFF"
            android:background="#FF5722"
            android:layout_gravity="left|right"
            android:layout_weight="0"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingLeft="10dp"
            android:paddingTop="4dp"
            android:paddingRight="10dp"
            android:paddingBottom="4dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enregistrer PDF"
            android:id="@+id/print_btn"
            android:textColor="#FFFFFF"
            android:background="#FF5722"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/purge_db_btn"
            android:layout_toStartOf="@+id/purge_db_btn"
            android:layout_weight="0"
            android:layout_gravity="left"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingLeft="10dp"
            android:paddingTop="4dp"
            android:paddingRight="10dp"
            android:paddingBottom="4dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/stat_layout_print">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Participants"
                android:id="@+id/total_stat"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="10dp"
                android:textIsSelectable="true"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Tres_bien"
                android:id="@+id/total_a_stat"
                android:layout_gravity="center_vertical"
                android:textSize="10dp"
                android:textColor="#FFFFFF"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Bien"
                android:id="@+id/total_b_stat"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="10dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Moyen"
                android:id="@+id/total_c_stat"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="10dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Mauvais"
                android:id="@+id/total_d_stat"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="10dp"
                android:layout_marginRight="30dp" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/stat_table"
            android:background="#673AB7"
            android:layout_below="@+id/linearLayout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:id="@+id/stat_top_row">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Question"
                    android:id="@+id/stat_question_coll"
                    android:layout_marginLeft="10dp"
                    android:layout_weight=".40"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/A"
                    android:id="@+id/stat_a_rate"
                    android:layout_marginLeft="10dp"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/B"
                    android:id="@+id/stat_b_rate"
                    android:layout_marginLeft="10dp"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/C"
                    android:id="@+id/stat_c_rate"
                    android:layout_marginLeft="10dp"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/D"
                    android:id="@+id/stat_d_rate"
                    android:layout_marginLeft="10dp"
                    android:textColor="#FFFFFF" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>